--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,15 @@ jar {
                 'Main-Class': "com.specific.group.Main"
         )
     }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
+
 
 dependencies {
     implementation 'org.postgresql:postgresql:42.3.8'
     implementation "com.github.akarazhev:json-simple:1.3"
-//    implementation files('../lib/postgresql-42.3.8.jar')
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'org.testcontainers:postgresql:1.16.2'
